--- a/index.html
+++ b/index.html
@@ -348,8 +348,16 @@
     var file_list = "";
 
     // ===== Helper Functions ===== //
-    function getFileName() {
+    function getNewFileName() {
+      return document.getElementById("newFile").value;
+    }
+
+    function getEditorFileName() {
       return document.getElementById("editorFile").value;
+    }
+
+    function getEditorContent() {
+      return document.getElementById("editor").value;
     }
 
     function fixFileName(fileName) {
@@ -434,11 +442,15 @@
         if (fileName.length > 0) {
           tableHTML += "<tr><td>" + fileName + "</td>";
           tableHTML += "<td>" + fileSize + "</td>";
-          tableHTML += "<td><a class=\"btn btn-a btn-sm smooth\" onclick=\"ws_cat('" + fileName + "')\">edit</a><a class=\"btn btn-c btn-sm smooth\" onclick=\"ws_run('" + fileName + "')\">run</a></td></tr>";
+          tableHTML += "<td><a class=\"btn btn-a btn-sm smooth\" onclick=\"ws_cat('" + fileName + "')\">edit</a>";
+          tableHTML += "<a class=\"btn btn-c btn-sm smooth\" onclick=\"ws_run('" + fileName + "')\">run</a></td></tr>";
         }
       }
 
-      tableHTML += "<tr><td><input type=\"text\" class=\"smooth\" value=\"/x.script\"/></td><td>-</td><td><a class=\"btn btn-b btn-sm smooth\">create</a></td></tr></tbody>"
+      tableHTML += "<tr><td><input type=\"text\" class=\"smooth\" value=\"/\" id=\"newFile\"/></td>";
+      tableHTML += "<td>-</td>";
+      tableHTML += "<td><a class=\"btn btn-b btn-sm smooth\" onclick=\"ws_create(getNewFileName())\">create</a></td>";
+      tableHTML += "</tr></tbody>";
 
       document.getElementById("scriptTable").innerHTML = tableHTML;
     }
@@ -474,11 +486,21 @@
       ws_send("cat \"" + fileName + "\"\n", set_editor);
     }
 
-    function ws_save(fileName) {
+    function ws_create(fileName) {
       ws_stop(fileName);
 
       fileName = fixFileName(fileName);
-      var content = document.getElementById("editor").value;
+
+      document.getElementById("editorFile").value = fileName;
+      document.getElementById("editor").value = "";
+
+      ws_send("create \"" + fileName + "\"\n", log);
+    }
+
+    function ws_save(fileName, content) {
+      ws_stop(fileName);
+
+      fileName = fixFileName(fileName);
       content = content.replace(/"/g, '\\"');
 
       ws_send("remove \"/temporary_script\"", log);
@@ -509,16 +531,32 @@
       };
 
       document.getElementById("editorSave").onclick = function() {
-        ws_save(getFileName());
+        ws_save(getEditorFileName(), getEditorContent());
       };
 
       document.getElementById("editorDelete").onclick = function() {
-        if (confirm("Delete " + getFileName() + "?")) ws_remove(getFileName());
+        if (confirm("Delete " + getEditorFileName() + "?")) ws_remove(getEditorFileName());
+      };
+
+      document.getElementById("editorDownload").onclick = function() {
+        fileName = getEditorFileName();
+        content = getEditorContent();
+
+        var element = document.createElement('a');
+        element.setAttribute('href', 'data:text/plain;charset=utf-8,' + encodeURIComponent(content));
+        element.setAttribute('download', fileName);
+
+        element.style.display = 'none';
+        document.body.appendChild(element);
+
+        element.click();
+
+        document.body.removeChild(element);
       };
 
       document.getElementById("editorRun").onclick = function() {
-        ws_save(getFileName());
-        ws_run(getFileName());
+        ws_save(getEditorFileName(), getEditorContent());
+        ws_run(getEditorFileName());
       };
 
       ws_init();
@@ -564,13 +602,14 @@
       <div class="col c12">
         <h2>Editor</h2>
 
-        <input type="text" class="smooth" value="/test.script" id="editorFile" />
+        <input type="text" class="smooth" value="/example" id="editorFile" />
         <textarea class="smooth" id="editor">
 REM Hello World!
         </textarea>
 
         <a class="btn btn-b btn-sm smooth" id="editorSave">save</a>
-        <a class="btn btn-a btn-sm smooth" id="editorDelete">delete</a>
+        <a class="btn btn-c btn-sm smooth" id="editorDelete">delete</a>
+        <a class="btn btn-a btn-sm smooth" id="editorDownload">download</a>
         <a class="btn btn-c btn-sm smooth" id="editorRun">run</a>
       </div>
 
