--- a/index.html
+++ b/index.html
@@ -313,7 +313,6 @@
     #status {
       text-align: center;
       padding: 0.5rem;
-      background: #20C20E;
       color: #fff;
       position: sticky;
       top: 0;
@@ -339,6 +338,18 @@
   </style>
 
   <script>
+    function status(mode) {
+      if (mode == "connected") {
+        document.getElementById("status").style.backgroundColor = "#3c5";
+      } else if (mode == "disconnected") {
+        document.getElementById("status").style.backgroundColor = "#d33";
+      } else if (mode == "connecting...") {
+        document.getElementById("status").style.backgroundColor = "#0ae";
+      }
+
+      document.getElementById("status").innerHTML = mode;
+    }
+
     function log(msg) {
       console.log("[WS] Message: " + msg);
     }
@@ -366,10 +377,6 @@
       return fileName;
     }
 
-    function status(mode) {
-      document.getElementById("status").innerHTML = mode;
-    }
-
     // ===== WebSocket Functions ===== //
     function ws_init() {
       status("connecting...");
@@ -383,9 +390,7 @@
     function ws_open(evt) {
       console.log("[WS] Connected");
       status("connected");
-      ws_ls();
-      //writeToScreen("CONNECTED");
-      //doSend("WebSocket rocks");
+      ws_memory(ws_ls);
     }
 
     function ws_close(evt) {
@@ -425,44 +430,32 @@
       ws_callback = callback;
     }
 
-    // ===== WebSocket Callback Functions ===== //
-    function set_scripts(csv) {
-      file_list += csv;
-
-      //console.log(file_list);
-
-      var lines = file_list.split(/\n/);
-      var tableHTML = "<thead><tr><th>File</th><th>Size</th><th>Actions</th></tr></thead><tbody>";
-
-      for (var i = 0; i < lines.length; i++) {
-        //console.log(lines[i]);
-        var data = lines[i].split(" ");
-        var fileName = data[0];
-        var fileSize = data[1];
-        if (fileName.length > 0) {
-          tableHTML += "<tr><td>" + fileName + "</td>";
-          tableHTML += "<td>" + fileSize + "</td>";
-          tableHTML += "<td><a class=\"btn btn-a btn-sm smooth\" onclick=\"ws_cat('" + fileName + "')\">edit</a>";
-          tableHTML += "<a class=\"btn btn-c btn-sm smooth\" onclick=\"ws_run('" + fileName + "')\">run</a></td></tr>";
-        }
-      }
-
-      tableHTML += "<tr><td><input type=\"text\" class=\"smooth\" value=\"/\" id=\"newFile\"/></td>";
-      tableHTML += "<td>-</td>";
-      tableHTML += "<td><a class=\"btn btn-b btn-sm smooth\" onclick=\"ws_create(getNewFileName())\">create</a></td>";
-      tableHTML += "</tr></tbody>";
-
-      document.getElementById("scriptTable").innerHTML = tableHTML;
-    }
-
-    function set_editor(content) {
-      document.getElementById("editor").value += content;
-    }
-
     // ===== WebSocket Actions ===== //
+    function ws_memory(callback) {
+      ws_send("mem", function(msg) {
+        var lines = msg.split(/\n/);
+        var byte = lines[0].split(" ")[0];
+        var used = lines[1].split(" ")[0];
+        var free = lines[2].split(" ")[0];
+
+        var percent = Math.floor(byte / 100);
+        var freepercent = Math.floor(free / percent);
+
+        document.getElementById("freeMemory").innerHTML = used + " byte used (" + freepercent + "% free)";
+        if (callback) callback();
+      });
+    }
+
     function ws_run(fileName) {
       fileName = fixFileName(fileName);
       ws_send("run \"" + fileName + "\"", log);
+    }
+
+    function ws_format() {
+      if (confirm("Format SPIFFS? This will delete all scripts!")) {
+        ws_send("format", log);
+        alert("Formatting will take a minute. You need to reconnect afterwards.");
+      }
     }
 
     function ws_stop(fileName) {
@@ -472,7 +465,34 @@
 
     function ws_ls() {
       file_list = "";
-      ws_send("ls\n", set_scripts);
+      ws_send("ls\n", function(csv) {
+        file_list += csv;
+
+        //console.log(file_list);
+
+        var lines = file_list.split(/\n/);
+        var tableHTML = "<thead><tr><th>File</th><th>Size</th><th>Actions</th></tr></thead><tbody>";
+
+        for (var i = 0; i < lines.length; i++) {
+          //console.log(lines[i]);
+          var data = lines[i].split(" ");
+          var fileName = data[0];
+          var fileSize = data[1];
+          if (fileName.length > 0) {
+            tableHTML += "<tr><td>" + fileName + "</td>";
+            tableHTML += "<td>" + fileSize + "</td>";
+            tableHTML += "<td><a class=\"btn btn-a btn-sm smooth\" onclick=\"ws_cat('" + fileName + "')\">edit</a>";
+            tableHTML += "<a class=\"btn btn-c btn-sm smooth\" onclick=\"ws_run('" + fileName + "')\">run</a></td></tr>";
+          }
+        }
+
+        tableHTML += "<tr><td><input type=\"text\" class=\"smooth\" value=\"/\" id=\"newFile\"/></td>";
+        tableHTML += "<td>-</td>";
+        tableHTML += "<td><a class=\"btn btn-b btn-sm smooth\" onclick=\"ws_create(getNewFileName())\">create</a></td>";
+        tableHTML += "</tr></tbody>";
+
+        document.getElementById("scriptTable").innerHTML = tableHTML;
+      });
     }
 
     function ws_cat(fileName) {
@@ -483,7 +503,9 @@
       document.getElementById("editorFile").value = fileName;
       document.getElementById("editor").value = "";
 
-      ws_send("cat \"" + fileName + "\"\n", set_editor);
+      ws_send("cat \"" + fileName + "\"\n", function(content) {
+        document.getElementById("editor").value += content;
+      });
     }
 
     function ws_create(fileName) {
@@ -526,8 +548,24 @@
     // ===== Startup ===== //
     window.addEventListener("load", function() {
 
+      document.getElementById("scriptsReload").onclick = function() {
+        ws_memory(ws_ls);
+      };
+
+      document.getElementById("reconnect").onclick = function() {
+        ws_init();
+      };
+
+      document.getElementById("format").onclick = function() {
+        ws_format();
+      };
+
       document.getElementById("stop").onclick = function() {
         ws_stop("");
+      };
+
+      document.getElementById("editorReload").onclick = function() {
+        ws_cat(getEditorFileName());
       };
 
       document.getElementById("editorSave").onclick = function() {
@@ -554,8 +592,11 @@
         document.body.removeChild(element);
       };
 
+      document.getElementById("editorStop").onclick = function() {
+        ws_stop(getEditorFileName());
+      }
+
       document.getElementById("editorRun").onclick = function() {
-        ws_save(getEditorFileName(), getEditorContent());
         ws_run(getEditorFileName());
       };
 
@@ -584,23 +625,24 @@
     <div class="row">
       <div class="col c12">
         <h2>Status</h2>
-        <p><b>i2c connection: </b><span>OK</span></p>
-        <p><b>Free memory: </b><span>x Bytes</span></p>
-        <a class="btn btn-c btn-sm smooth" id="stop">STOP</a>
+        <a class="btn btn-a btn-sm smooth" id="reconnect">reconnect</a>
+        <a class="btn btn-c btn-sm smooth" id="format">format</a>
+        <a class="btn btn-c btn-sm smooth" id="stop">stop</a>
       </div>
     </div>
 
     <div class="row">
       <div class="col c12">
-        <h2>Scripts</h2>
+        <h2>Scripts <a class="btn btn-a btn-sm smooth" id="scriptsReload">reload</a></h2>
         <table class="table" id="scriptTable"></table>
+        <p><b>SPIFFS: </b><span id="freeMemory">-</span></p>
       </div>
     </div>
 
     <div class="row">
 
       <div class="col c12">
-        <h2>Editor</h2>
+        <h2>Editor <a class="btn btn-a btn-sm smooth" id="editorReload">reload</a></h2>
 
         <input type="text" class="smooth" value="/example" id="editorFile" />
         <textarea class="smooth" id="editor">
@@ -610,6 +652,7 @@ REM Hello World!
         <a class="btn btn-b btn-sm smooth" id="editorSave">save</a>
         <a class="btn btn-c btn-sm smooth" id="editorDelete">delete</a>
         <a class="btn btn-a btn-sm smooth" id="editorDownload">download</a>
+        <a class="btn btn-c btn-sm smooth" id="editorStop">stop</a>
         <a class="btn btn-c btn-sm smooth" id="editorRun">run</a>
       </div>
 
