--- a/web/index.html
+++ b/web/index.html
@@ -20,7 +20,7 @@
 <body>
 
   <nav>
-    <b>WiFi Duck</b> version NaN
+    <a href="index.html">WiFi Duck</a>
   </nav>
 
   <div id="status"></div>
@@ -51,9 +51,16 @@
         <button class="primary" id="editorDownload">download</button>
         <button class="success" id="editorSave">save</button>
 
-        <hr>
-
-        <p>WiFi Duck version -1 | Copyleft myself</p>
+        <div id="copyright">
+          <a href="https://github.com/spacehuhn/WiFiDuck/wiki" target="_blank">Wiki</a> |
+          <a href="https://github.com/spacehuhn/WiFiDuck" target="_blank">GitHub</a> |
+          <a href="credits.html">Credits</a>
+          <br>
+          <br>
+          Version 1.0<br>
+          Copyright (c) 2019 Stefan Kremser<br>
+          <a href="https://spacehuhn.io" target="_blank">spacehuhn.io</a>
+        </div>
 
       </div>
     </div>
