Faster status update, faster file transfer

--- a/web/terminal.html
+++ b/web/terminal.html
@@ -50,6 +50,7 @@
 
         <button class="primary" id="send">send</button>
         <button class="warn" id="clear">clear</button>
+        <button id="reconnect">reconnect</button>
 
         <p id="output"></p>
 
