Unsaved changed warn message A little info to make it obvious that you haven't clicked save yet.

--- a/web/index.html
+++ b/web/index.html
@@ -58,6 +58,8 @@
         <button class="warn" id="editorRun">run</button>
         <button class="success" id="editorSave">save</button>
 
+        <p id="editorinfo">saved</p>
+
         <footer>
           <a href="settings.html">Settings</a> |
           <a href="terminal.html">Terminal</a> |
