Settings safety checks and autofix

--- a/web/settings.html
+++ b/web/settings.html
@@ -63,6 +63,8 @@
 
         <p>Restart the device to apply new settings.</p>
 
+        <button class="danger" id="reset">Reset settings</button>
+
         <h2>Update</h2>
 
         <p>
